--- a/public/css/prototype.css
+++ b/public/css/prototype.css
@@ -4,7 +4,6 @@ html{
 }
 
 body{
-    background-image: url("/images/beanstalk.png");
     font-family: 'Source Sans Pro', sans-serif;
 }
 
@@ -15,6 +14,17 @@ body{
 }
 #section-home b{
     color: #1ABC9C;
+}
+
+#section-home{
+    padding-top: 20px;
+    padding-bottom: 20px;
+}
+
+#proto-form{
+    padding: 20px;
+    border: solid 2px #6d6d6d;
+    border-radius: 10px;
 }
 
 header .menu-items a:hover{
@@ -41,4 +51,27 @@ header .menu-items a:hover{
     border-radius: 5px;
 }
 
+.proto-card{
+    margin-bottom: 10px;
+}
 
+#myBtn {
+    display: none;
+    position: fixed;
+    bottom: 20px;
+    right: 30px;
+    z-index: 99;
+    border: none;
+    outline: none;
+    background-color: red;
+    color: white;
+    cursor: pointer;
+    padding:10px 22px;
+    border-radius: 42px;
+    font-size: 18px;
+    transition-duration: 0.3s;
+}
+
+#myBtn:hover {
+    background-color: #0059c4;
+}
